fixed overlap for mobile screen

--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -39,6 +39,10 @@
     border-color: white; 
     transform: scale(1.05);
   }
+
+  .card-container{
+    min-width: 360px;
+  }
   
   @media (max-width: 1400px) {
     .projectsCard {
@@ -56,5 +60,12 @@
     .projectsCard {
       max-width: 65%;
     }
+  }
+
+  @media (max-width: 426px) {
+    .card-container{
+      min-width: 300px;
+    }
+    
   }
   
