--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -13,6 +13,7 @@
 }
 
 .sidebar {
+    z-index: 100;
     display: block;
     height: 100vh;
     background: #12151e;
